# Heat-RAT

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  TODO.txt  updateLog.txt
HeatRAT/: HeatRAT.cpp  HeatRAT.sln  HeatRAT.vcxproj  README.md  build.cpp  main.h  preferences.cpp  session.cpp  sessionSelecter.h  sessions.cpp  transfer.h
HeatRAT/HeatRAT/: AssemblyInfo.rc  HeatRAT.cpp  HeatRAT.vcxproj  HeatRAT.vcxproj.filters  build.cpp  help.cpp  main.h  modules.h  ports.cpp  preferences.cpp  session.cpp  sessionSelecter.h  sessions.cpp  transfer.h
HeatRAT/HeatRAT/Modules/About/: about.txt
HeatRAT/HeatRAT/Modules/Commands/: Menu.txt  Preferences.txt  Session.txt
HeatRAT_lite/: HeatRat_lite.sln  README.md  updateLog.txt
HeatRAT_lite/HeatRat_lite/: AssemblyInfo.rc  FtpConnect.cpp  FtpConnect.h  HeatRat_lite.cpp  HeatRat_lite.filters  HeatRat_lite.h  HeatRat_lite.vcxproj  HeatRat_lite.vcxproj.filters  WinApi.cpp  WinApi.h  main.cpp
old_ver/HeatRAT/: HeatRAT.vcxproj.filters  help.cpp  main.h  preferences.cpp  session.cpp  sessionSelecter.h  sessions.cpp  transfer.h
old_ver/HeatRAT/Modules/Commands/: Ports.txt  Sessions.txt
old_ver/HeatRAT/Modules/Grabbed/: processes.txt
